# cli_game

./: .gitignore  CMakeLists.txt  cli_game.drawio  main.cpp
Classes/: Player.cpp  Player.h
Classes/Ability/: Ability.cpp  Ability.h
Classes/AbilityBook/: AbilityBook.cpp  AbilityBook.h
Classes/Abstract Classes/: GamePiece.cpp  GamePiece.h
Classes/Abstract Classes/Character/: Character.cpp  Character.h
Classes/Abstract Classes/GamePiece/: GamePiece.cpp  GamePiece.h
Classes/AbstractClasses/Character/: Character.cpp  Character.h
Classes/AbstractClasses/GamePiece/: GamePiece.cpp  GamePiece.h
Classes/AbstractClasses/Item/: Item.cpp  Item.h
Classes/Consumable/: Consumable.cpp  Consumable.h
Classes/Encounter/: Encounter.cpp  Encounter.h
Classes/Enemy/: Enemy.cpp  Enemy.h
Classes/Exit/: Exit.cpp  Exit.h
Classes/GameManager/: GameManager.cpp  GameManager.h
Classes/GamePieceGenerator/: GamePieceGenerator.cpp  GamePieceGenerator.h
Classes/Player/: Player.cpp  Player.h
Globals/: Globals.cpp  Globals.h
